<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    tools:context=".activities.RegisterActivity">


    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/name"
                android:layout_width="72dp"
                android:layout_height="20dp"
                android:text="@string/full_name"
                android:textStyle="bold"
                android:layout_marginStart="8dp"/>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <EditText
                android:id="@+id/signUpName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/email"
                android:layout_width="72dp"
                android:layout_height="20dp"
                android:text="@string/email"
                android:textStyle="bold"
                android:layout_marginStart="8dp" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <EditText
                android:id="@+id/signUpEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"/>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/username"
                android:layout_width="72dp"
                android:layout_height="20dp"
                android:text="@string/username"
                android:textStyle="bold"
                android:layout_marginStart="8dp" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <EditText
                android:id="@+id/signUpUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/password"
                android:layout_width="72dp"
                android:layout_height="20dp"
                android:text="@string/password"
                android:textStyle="bold"
                android:layout_marginStart="8dp" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <EditText
                android:id="@+id/signUpPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <CheckBox
                android:id="@+id/checkBoxPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_password"/>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <TextView
                android:id="@+id/age"
                android:layout_width="72dp"
                android:layout_height="20dp"
                android:text="@string/age"
                android:textStyle="bold"
                android:layout_marginStart="8dp" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <EditText
                android:id="@+id/signUpAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/height"
                android:layout_width="72dp"
                android:layout_height="20dp"
                android:text="@string/height"
                android:textStyle="bold"
                android:layout_marginStart="8dp" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <EditText
                android:id="@+id/signUpHeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/weight"
                android:layout_width="72dp"
                android:layout_height="20dp"
                android:text="@string/weight"
                android:textStyle="bold"
                android:layout_marginStart="8dp"/>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <EditText
                android:id="@+id/signUpWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"/>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <TextView
                android:id="@+id/goal"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/goal"
                android:textStyle="bold" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <Spinner
                android:id="@+id/signUpGoal"
                android:layout_width="match_parent"
                android:layout_height="51dp"/>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TextView
                android:id="@+id/physicalActivity"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/active"
                android:textStyle="bold" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <Spinner
                android:id="@+id/signUpPhysicalActivity"
                android:layout_width="match_parent"
                android:layout_height="51dp"/>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="20dp"/>

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="match_parent"
                android:layout_height="85dp">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:text="@string/female" />
            </RadioGroup>

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="30dp"/>

            <Button
                android:id="@+id/buttonLocation"
                android:layout_width="250dp"
                android:layout_height="55dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:onClick="getLocationBtn"
                android:text="@string/enter_location"
                android:textAllCaps="true"
                android:textColor="@color/cardview_light_background"
                android:textSize="15sp"
                android:textStyle="bold" />

            <androidx.legacy.widget.Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/buttonRegister"
                android:layout_width="335dp"
                android:layout_height="64dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:textColor="@color/cardview_light_background"
                android:onClick="registerUser"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textSize="19sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/verify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/verification_code"
        android:textSize="19sp"
        android:textStyle="bold"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.483"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

    <EditText
        android:id="@+id/verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44" />

    <Button
        android:id="@+id/verifyButton"
        android:background="@color/colorPrimary"
        android:layout_width="335dp"
        android:layout_height="64dp"
        android:onClick="verifyUser"
        android:text="@string/verify"
        android:textAllCaps="true"
        android:textColor="@color/cardview_light_background"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.61" />


</androidx.constraintlayout.widget.ConstraintLayout>